# ComputerVision-demos

./: README.md
01-Images/: borders.py  digitization.py
02-Edges/: .RData  .Rhistory  edge_example.r  hough.py
03-Geometric_transformations/: transformations.py
04-Interest_points/: PCA.r
05-FeatureDescriptors/: CMakeLists.txt  CameraCalibration.h  main.cpp
10-ImageClassification, etc/BasicNeuralNetwork/: NeuralNetwork.ipynb  trained_weights_CIFAR10.save
10-ImageClassification, etc/CIFAR10-dataset/: CIFAR10_dataset.ipynb
10-ImageClassification, etc/ConvolutionalAutoencoder/: Autoencoder.ipynb
10-ImageClassification, etc/ConvolutionalAutoencoderWLinearBottleneck/: Autoencoder_w_bottleneck.ipynb
10-ImageClassification, etc/CrossValidation/: CrossValidation.ipynb
10-ImageClassification, etc/GradientDescent/: GradientDescent.ipynb
10-ImageClassification, etc/LinearClassifier/: LinearClassifier.ipynb
10-ImageClassification, etc/NearestNeighbour/: NearestNeighbour.ipynb
10-ImageClassification, etc/VariationalAutoencoder/: VariationalAutoencoderCIFAR10.ipynb  VariationalAutoencoderConv1d_MNIST.ipynb  VariationalAutoencoderConv2d_CIFAR10.ipynb  VariationalAutoencoderLinear_MNIST.ipynb  VariationalAutoencoderMNIST.ipynb  trained_weights_CIFAR10.save  trained_weights_MNIST.save  trained_weights_conv1d_MNIST.save  trained_weights_conv2d_CIFAR10.save  trained_weights_linear_MNIST.save
10-ImageClassification/BasicNeuralNetwork/: NeuralNetwork.ipynb
10-ImageClassification/ConvolutionalAutoencoder/: Autoencoder.ipynb
(+4 files in other folders)
